@@ -21,7 +21,6 @@ import org.mortbay.jetty.orchestrator.configuration.SimpleNodeArrayConfiguration
 public class PerfTestParams implements Serializable
 {
     private static final String JDK_TO_USE = System.getProperty("test.jdk.name", "load-jdk17");
-    private static final boolean USE_LOOM_IF_POSSIBLE = Boolean.getBoolean("test.jdk.useLoom");
 
     private static final EnumSet<ConfigurableMonitor.Item> MONITORED_ITEMS = EnumSet.of(
         ConfigurableMonitor.Item.CMDLINE_CPU,
@@ -46,7 +45,7 @@ public class PerfTestParams implements Serializable
         )
         .nodeArray(new SimpleNodeArrayConfiguration("probe")
             .node(new Node("load-sample"))
-            .jvm(new Jvm(new LocalJdk(JDK_TO_USE), defaultJvmOpts("-Xms8g", "-Xmx8g")))
+            .jvm(new Jvm(new LocalJdk(JDK_TO_USE), defaultJvmOpts("-Xint", "-Xms8g", "-Xmx8g")))
         );
 
     public enum Protocol
@@ -167,13 +166,13 @@ public class PerfTestParams implements Serializable
         switch (protocol)
         {
             case http:
-                return 110_000;
+                return 750_000;
             case https:
-                return 130_000;
+                return 750_000;
             case h2c:
-                return 120_000;
+                return 750_000;
             case h2:
-                return 130_000;
+                return 750_000;
             default:
                 throw new AssertionError();
         }
@@ -196,11 +195,6 @@ public class PerfTestParams implements Serializable
         }
     }
 
-    public boolean useLoom()
-    {
-        return USE_LOOM_IF_POSSIBLE;
-    }
-
     @Override
     public String toString()
     {
@@ -210,8 +204,6 @@ public class PerfTestParams implements Serializable
     private static String[] defaultJvmOpts(String... extra)
     {
         List<String> result = new ArrayList<>();
-        if (USE_LOOM_IF_POSSIBLE)
-            result.add("--enable-preview");
         result.add("-Xlog:gc*:file=gc.log:time,level,tags");
         result.add("-XX:+UnlockExperimentalVMOptions"); // JDK 11 needs this flag to enable ZGC
         result.add("-XX:+UseZGC");
